# academy-nvidia

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DECISIONS.md  Dockerfile.triton-reranker  ERROR_LOG.md  EVALS.md  Makefile  Projeto_ NVIDIA Startup AI Radar (1).md  Projeto_ NVIDIA Startup AI Radar.md  README.md  ROADMAP.md  SOURCES.md  alembic.ini  candidate_catalog_maximal_final_complementary_governed(1).csv  docker-compose.experimental.yml  docker-compose.observability.yml  docker-compose.yml  pyproject.toml  summary_raw.txt
.ai/: acceptance_gates.md  coding_rules.md  project_context.md  prompt_templates.md  testing_rules.md
.ai/workspace/: summary_raw.txt
.cache/scraping/: cache.db
.github/workflows/: ci.yml  corpus-maintenance.yml  eval.yml
.obsidian/: workspace.json
.pytest_tmp_epic36_1/test_action_brief_versioning_m0/: repo.db
.pytest_tmp_epic36_1/test_alembic_upgrade_and_downg0/: test_migrate.db
.pytest_tmp_epic36_1/test_analysis_run_brief_and_re0/: repo.db
.pytest_tmp_epic36_1/test_answer_quality_junit_erro0/: answer_quality_eval_junit.xml
.pytest_tmp_epic36_1/test_answer_quality_junit_fail0/: answer_quality_eval_junit.xml
.pytest_tmp_epic36_1/test_answer_quality_junit_skip0/: answer_quality_eval_junit.xml
.pytest_tmp_epic36_1/test_build_claims_from_existin0/: ledger.db
config/: decisioning.yaml  eval_thresholds.yaml  keywords.yaml  llm_routing.yaml  quantitative_parameters.yaml  rag_retrieval.yaml  reranking.yaml  scoring.yaml  source_quality.yaml  techniques.yaml
data/: data_rights_registry.csv  free_external_tool_registry.csv  source_registry.csv  verified_brazilian_ai_startups.json
docs/: 00_case_plan.md  00_project_brief.md  01_ARQUITETURA_GERAL.md  01_problem_definition.md  02_PIPELINE_SCRAPING.md  02_architecture.md  03_SISTEMA_MULTIAGENTE_LANGGRAPH.md  03_data_contracts.md  04_RAG_NVIDIA_RERANKING.md  04_agent_specs.md  05_MOTOR_RECOMENDACAO.md  05_rag_design.md  06_FRONTEND_DECISION_COCKPIT.md  06_recommendation_logic.md  07_evaluation_plan.md  08_demo_script.md  09_user_workflow.md  10_ai_native_maturity_matrix.md  11_defensibility_score.md  12_gap_taxonomy.md  13_nvidia_mapping_matrix.md  14_evidence_policy.md  15_scraping_policy.md  16_briefing_template.md  17_ai_output_rubric.md  25_end_of_epic_closure.md  26_architecture_utilization_audit.md  27_developer_rag_design.md  28_development_workspace_quality.md  35_product_rag_design.md  36_rag_evaluation.md  37_embeddings_vector_store.md  38_rag_reranking_context_packing.md  39_qdrant_persistent_vector_store.md  40_ci_cd_quality_gates.md  41_end_to_end_eval_harness.md  42_automated_qdrant_corpus_ingestion.md  43_automated_nvidia_source_sync.md  44_corpus_freshness_versioning_policy.md  45_scheduled_corpus_maintenance.md  (+50 more)
examples/: bad_briefing.md  golden_briefing.md  golden_recommendation.json  golden_startup_profile.json
final_case_evidence/: access_control_rag_report.json  agent_tool_observability_report.json  ai_governance_maturity_report.json  all_candidate_benchmark_documentation.md  api_key_readiness_report.json  benchmark_coverage_report.json  benchmark_debt_report.json  benchmark_manifest.json  benchmark_report.json  benchmark_results.jsonl  benchmark_type_coverage_report.json  calibration_registry.csv  candidate_catalog.csv  candidate_decision_matrix.csv  candidate_promotion_recommendations.json  candidate_status_summary.json  clean_release_manifest.generated.json  cold_start_report.json  container_scan_report.json  context_firewall_report.json  counter_evidence_product_spike_report.json  counter_evidence_product_spike_report.md  data_minimization_report.json  data_rights_registry.csv  decision_ledger.csv  demo_archive_manifest.json  dependency_vulnerability_report.json  diagnostic_eval_cases.json  diagnostic_value_triage_report.json  diagnostic_value_triage_report.md  direct_alternative_gap_benchmark_report.json  direct_alternative_gap_benchmark_report.md  direct_benchmark_protocol.md  docker_services_report.json  evidence_first_ui_report.json  evidence_sufficiency_product_spike_report.json  evidence_sufficiency_product_spike_report.md  external_free_verification_report.json  external_free_verification_report.md  external_reviewer_mode_report.json  (+93 more)
frontend/: .env.example  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
migrations/: env.py
nvidia_startup_ai_radar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
obsidian-vault/: Known Limitations.md
ops/: prometheus.yml
prompts/: build_epic.md  create_adr.md  end_of_epic_closure.md  fix_tests_only.md  plan_epic.md  review_diff.md  update_obsidian.md
sample_inputs/: README.md
scripts/: __init__.py  audit_nvidia_corpus_freshness.py  batch_implement_all.py  build_best_case_runtime_report.py  build_candidate_decision_matrix.py  build_final_release.py  build_regression_dashboard.py  build_runtime_usage_inventory.py  calibrate_gap_diagnosis.py  calibrate_rag_parameters.py  calibrate_rag_semantic_top_k.py  calibrate_recommendation_parameters.py  calibrate_scoring_ablation.py  calibrate_scraping_baseline.py  calibrate_weights_sensitivity.py  check_api_key_readiness.py  check_benchmark_type_policy.py  check_briefing_claim_grounding.py  check_candidate_catalog.py  check_candidate_governance_final_closure.py  check_candidate_promotion_closure.py  check_docs_closure.py  check_docs_match_runtime.py  check_evidence_freshness.py  check_external_free_verification.py  check_external_services_ready.py  check_final_release_zip.py  check_finalization_governance.py  check_free_external_tools.py  check_implemented_family_best_tool.py  check_lineage_coverage.py  check_no_demo_dependency.py  check_no_local_artifacts.py  check_no_method_only_runtime_modules.py  check_no_mock_runtime.py  check_numeric_governance.py  check_product_configuration.py  check_rag_corpus_coverage.py  check_referenced_scripts_exist.py  check_release_cleanliness.py  (+71 more)
src/: __init__.py  main.py
tests/: conftest.py
(+2150 files in other folders)
