[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nvidia-startup-ai-radar"
version = "0.1.0"
description = "Foundation workspace for the NVIDIA Startup AI Radar project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic>=2.7",
  "pydantic-settings",
  "python-dotenv",
  "requests",
  "beautifulsoup4",
  "trafilatura",
  "playwright",
  "langgraph",
  "qdrant-client",
  "sqlalchemy",
  "alembic",
  "psycopg2-binary",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "black",
  "mypy",
]
rag = [
  "sentence-transformers>=5.5.1",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
  "integration: marks tests that exercise integration paths across components or local services",
]

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = '''
^/notebooks/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["UP042"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
packages = ["src"]
exclude = ["src/agents/"]

[[tool.mypy.overrides]]
module = ["sentence_transformers", "yaml"]
ignore_missing_imports = true
