[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nvidia-startup-ai-radar"
version = "0.1.0"
description = "Foundation workspace for the NVIDIA Startup AI Radar project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic>=2.7",
  "pydantic-settings",
  "python-dotenv",
  "requests",
  "PyYAML",
  "beautifulsoup4",
  "trafilatura",
  "playwright",
  "qdrant-client",
  "sqlalchemy",
  "alembic",
  "psycopg2-binary",
  "langgraph>=1.2,<2",
  "langgraph-checkpoint-postgres>=3.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "black",
  "mypy",
]
rag = [
  "qdrant-client",
  "sentence-transformers>=2.2.0",
  "rank-bm25",
  "bm25s",
]
llm-judge = [
  "instructor>=1.8,<2",
]
agents = [
  "langgraph>=1.2,<2",
]
agent-orchestration = [
  "langgraph>=1.2,<2",
  "langgraph-checkpoint-postgres>=3.1.0",
]
postgres = [
  "psycopg2-binary",
]
eval = [
  "datasets",
]
ragas-eval = [
  "ragas>=0.2.0",
]
security = [
  "bandit",
  "pip-audit",
  "detect-secrets",
]
full = [
  "qdrant-client",
  "sentence-transformers>=2.2.0",
  "rank-bm25",
  "bm25s",
  "langgraph>=1.2,<2",
  "langgraph-checkpoint-postgres>=3.1.0",
  "psycopg2-binary",
  "datasets",
  "bandit",
  "pip-audit",
  "detect-secrets",
  "instructor>=1.8,<2",
  "cyclonedx-bom",
  "ragas>=0.2.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
  "unit: marks isolated unit tests (default, no marker needed)",
  "integration: marks tests that exercise integration paths across components or local services",
  "acceptance: marks end-to-end Product Golden Path acceptance tests",
  "e2e: marks Playwright browser-based end-to-end tests",
  "slow: marks tests that take longer than 5 seconds",
  "optional: marks tests that require optional dependencies (rag, llm-judge, agent-orchestration)",
  "external_service: marks tests that require external services (Qdrant, PostgreSQL)",
]

[tool.black]
line-length = 120
target-version = ["py311"]
extend-exclude = '''
^/notebooks/
|.*\.pytest_tmp.*/
|/frontend/node_modules/
|/\.git/
'''

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["notebooks/*.ipynb", "migrations/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["UP042"]

[tool.ruff.lint.per-file-ignores]
"scripts/calibrate_recommendation_parameters.py" = ["E501"]
"scripts/calibrate_scoring_ablation.py" = ["E501"]
"scripts/batch_implement_all.py" = ["E501"]
"scripts/map_catalog_to_implementation.py" = ["E402", "E501", "E722", "F601"]
"src/governance/impl_*.py" = ["E501"]
"src/governance/final_closure.py" = ["E501"]
"src/rag/*.py" = ["E501"]
"src/evaluation/gap_diagnosis_baseline.py" = ["E501"]
"src/evaluation/qdrant_retrieval_eval.py" = ["E501"]
"src/evaluation/rag_baseline.py" = ["E501"]
"src/evaluation/recommendation_baseline.py" = ["E501"]
"src/evaluation/scraping_baseline.py" = ["E501"]
"src/evaluation/source_evidence_baseline.py" = ["E501"]
"src/evaluation/startup_scoring_calibration.py" = ["E501"]
"src/quality/decision_calibration_registry.py" = ["E501"]
"tests/evals/test_qdrant_retrieval_eval.py" = ["E501"]
"tests/unit/test_qdrant_rag_service.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
packages = ["src"]
exclude = ["src/agents/"]

[[tool.mypy.overrides]]
module = ["requests", "sentence_transformers", "yaml", "ragas", "datasets", "ragas.metrics"]
ignore_missing_imports = true
